assets/css/style.css
/* ... */
.article.article--in-list:before {
    content: "";
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    left: -1.5rem;
    top: -1.5rem;
    z-index: -1;
    border: 2px solid var(--color-main);
} */

.article-preview__heading {
    font-size: 2.75rem;
}
.publish-date {
    font-size: .85em;
}
.article-preview__publish-date a {
    opacity: .75;
    text-decoration: none;
}

pre {
    padding: 1rem;
    overflow: auto;
}

.tag-list__item {
    display: inline-block;
    background: var(--color-main);
    color: var(--color-secondary);
    border-radius: 3px;
    padding: .125rem .25rem;
    margin-bottom: .5rem;
    margin-right: .5rem;
}

.tag-list__item a {
    color: var(--color-secondary);
}


@media all and (min-width: 800px) {

    .footer,
    .author,
    .support {
        display: flex;
        justify-content: space-between;
    }

    .author .left,
    .support .left,
    .footer .left {
        margin-bottom: 0;
    }
}

.author .left,
.support .left,
.footer .left {
    margin-bottom: 2rem;
}

.author,
.support {
    background: var(--color-main);
    color: var(--color-font-fg);
    padding: 4rem 2rem;
}

.support+.author {
    margin-top: 0rem;
}

.support {
    background: var(--color-secondary);
    color: var(--color-main);
    flex-direction: column;
}

.support a {
    color: var(--color-main);
}

.author p,
.support p {
    margin-bottom: 0;
}

@media all and (min-width: 800px) {
    .author .right {
        padding-left: 2rem;
    }

    .author .avatar {
        margin-left: 2rem;
    }
}

.author .avatar {
    max-width: 200px;
    transition: all linear 60s;
}

.author .avatar:hover {
    animation: avatar-hue linear 15s infinite;
}

@keyframes avatar-hue {
    from {
        filter: hue-rotate(0deg);
    }

    to {
        filter: hue-rotate(360deg);
    }
}

.age-note {
    background: #d46767;
    border: .35rem solid firebrick;
    padding: 1rem 2rem;
    color: #222;
}

.tags-categories,
.license {
    background: var(--color-bg-box);
    padding: 2rem;
}

.side-by-side img {
    width: auto;
    max-width: 100%;
}

@media all and (min-width: 640px) {

    .tags-categories {
        display: flex;
    }

    .tags-categories .tags {
        margin-left: 2rem;
    }

    .side-by-side {
        display: flex;
        flex-direction: row;
        align-items: center;
        margin: 2rem 0;
    }
    
    .side-by-side.align-top {
        align-items: flex-start;
    }
    
    .side-by-side.align-bottom {
        align-items: flex-end;
    }

    .side-by-side__first {
        margin-bottom: 3rem;
    }

    .side-by-side__off-left {
        margin-left: -20vw;
    }

    .side-by-side .small {
        max-width: 40%;
        padding: 2rem;
    }

    .side-by-side .bg {
        background: var(--color-main);
        color: var(--color-secondary);
    }

    .side-by-side .wide {
        max-width: 60%;
    }

    .side-by-side img,
    .side-by-side figure {
        max-width: 100%;
        margin: 0;
    }
}

.note {
    background: var(--color-main);
    color: var(--color-font-fg);
    padding: 1rem 1rem 1rem 2rem;
    border-left: .5rem solid var(--color-secondary);
    margin: 2rem 1rem;
}

.note__heading {
    font-weight: bold;
    display: block;
}

.taxonomy-list {
    display: flex;
    padding-bottom: 2rem;
    align-content: flex-end;
    justify-content: space-between;
    flex-wrap: wrap;
}

.taxonomy__item {
        width: 20%;
        height: 2rem;
        display: inline-block;
        padding: 2rem 0;
}

.taxonomy__item-inner {
    padding: 1rem;
    background: var(--color-main);
    color: var(--color-secondary);
}

.taxonomy__item a {
    color: var(--color-secondary);
}

.article-note__content {
    font-size: 1.3rem;
}

.language-nav {
    font-size: .75rem;
}

.language-nav ul {
    display: inline-block; 
    list-style: none;
}

blockquote {
    font-size: 110%;
    font-style: italic;
    text-indent: 1rem;
    border-left: .25rem solid var(--color-main);
    padding: .25rem 0;
    padding-left: 1rem;
}

.series__box:before {
    content: "";
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    left: -1rem;
    top: -1rem;
    z-index: -1;
    border: 2px solid var(--color-main);
}

.series__box {
    float: left;
    padding: 2rem;
    margin: 2rem;
    position: relative;
    background: var(--color-secondary);
    z-index: 1;
    display: block;
    margin-left: -5vw;
}
/**
 * EXPERIMENTAL
 */

 .tag-list__item {
    display: inline-block;
    background: var(--color-secondary);
    color: var(--color-main);
    padding: .125rem .25rem;
    border-radius: 0px;
    margin-bottom: .5rem;
    margin-right: .5rem;
    position: relative;
    padding: .25em .5em;
    z-index: 1;
}

.tag-list__item:before {
    content: "";
    width: 100%;
    height: 100%;
    border: 2px solid var(--color-main);
    left: -.45em;
    top: -.45em;
    display: block;
    position: absolute;
    z-index: -1;
    transition: all linear .1s;
}

.tag-list__item:hover::before {
    top: -.1rem;
    left: -.1rem;
}

.tag-list__item a {
    color: var(--color-main);
    text-decoration: none;
}

ul.tag-list, ul.category-list {
    margin-top: 1rem;
}

table {
    background: #fff;
    border-spacing: unset;
    border-right: 1px solid;
    border-left: 1px solid;
    width: calc(100% + 30rem);
    margin-left: -15rem;
}

thead {
    background: var(--color-main);
    color: var(--color-secondary);
}

thead th {
    text-align: left;
    padding-left: .5rem;
}

tbody td {
    padding: .5rem;
    border-bottom: 1px solid #333;
}

.intro-text {
    display: none;;
}
body.section-tags .intro-text,
body.section-categories .intro-text{
    display: block;
}

.rating-list {
    font-size: 2rem;
}

.support-cause-list__wrapper {
    display: flex;
    margin-top: 2rem;
    justify-content: space-between;
}

.support-cause-list {
    text-indent: 1rem;
    margin-bottom: 1rem;
}
/* ... */

